--- a/Flask_project/templates/crop-result.html
+++ b/Flask_project/templates/crop-result.html
@@ -4,6 +4,11 @@
   .mt-0 {
   margin-top: 50 !important;
 }
+html body {
+  background-image:url('/static/images/green.avif');
+  background-size: contain;
+  
+}
 </style>
 
 
