--- a/Flask_project/templates/index.html
+++ b/Flask_project/templates/index.html
@@ -66,7 +66,7 @@
 				</a>
 			</div>
 
-			<div class="col-lg-4 col-md-6 blog-middle mt-lg-0 mt-sm-5 pt-lg-0 pt-md-5">
+			<div class="col-lg-4 col-md-6 blog-middle mt-lg-0 mt-sm-5 pt-lg-0 pb-md-5">
 
 				<img src="{{ url_for('static', filename='images/s4.jpg') }}" class="img-fluid" alt="">
 
@@ -92,10 +92,27 @@
 				</a>
 			</div>
 		</div>
+		<div class="row blog-grids">
+			<div class="col-lg-4 col-md-6 blog-left mb-lg-0 mb-sm-5 pb-lg-0 pb-5">
+			</div>
+
+
+			<div class="col-lg-4 col-md-6 blog-middle mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
+				<img src="{{ url_for('static', filename='images/2.jpg') }}" class="img-fluid" alt="" />
+				<a href="{{ url_for('yield_prediction') }}">
+					<div class="blog-info">
+
+						<h4>Yield Prediction</h4>
+
+						<p class="mt-2">It will predict how much yield should be produced</p>
+					</div>
+				</a>
+			</div>
+		</div>
 	</div>
 </section>
 
-<section class="blog py-5">
+<!--<section class="blog py-5">
 	<div class="container py-md-5">
 		<div class="row blog-grids">
 			<div class="col-lg-4 col-md-6 blog-left mb-lg-0 mb-sm-5 pb-lg-0 pb-5">
@@ -115,7 +132,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section>-->
 
 <!-- //Products & Services -->
 
