--- a/Flask_project/templates/crop.html
+++ b/Flask_project/templates/crop.html
@@ -4,7 +4,7 @@
 
     html body {
       background-image:url('/static/images/rec.jpg');
-      background-size: contain;
+      background-size:cover;
       
   }
 
