--- a/Flask_project/templates/crop.html
+++ b/Flask_project/templates/crop.html
@@ -4,7 +4,7 @@
 
     html body {
       background-image:url('/static/images/rec.jpg');
-      background-size:cover;
+      background-size:contain;
       
   }
 
@@ -35,7 +35,7 @@
         class="form-control"
         id="Nitrogen"
         name="nitrogen"
-        placeholder="Enter the value (example:50)"
+        placeholder="Enter the value"
         style="font-weight: bold"
         required
       />
@@ -49,7 +49,7 @@
         class="form-control"
         id="Phosphorous"
         name="phosphorous"
-        placeholder="Enter the value (example:50)"
+        placeholder="Enter the value"
         style="font-weight: bold"
         required
       />
@@ -62,7 +62,7 @@
         class="form-control"
         id="Pottasium"
         name="pottasium"
-        placeholder="Enter the value (example:50)"
+        placeholder="Enter the value"
         style="font-weight: bold"
         required
       />
