--- a/Flask_project/templates/layout.html
+++ b/Flask_project/templates/layout.html
@@ -155,7 +155,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" style="background-color: #f35aee00;">
+	<nav class="navbar navbar-expand-lg navbar-dark static-top" style="background-color:rgb(35, 34, 34);font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;font-size:20px">
 		<div class="container">
 			<a class="navbar-brand" href="{{ url_for('home') }}">
 				<img src="{{ url_for('static', filename='images/logo.png') }}" style="width: 90px; height: 55px" alt="">
