feat:added marquee

--- a/Flask_project/templates/index.html
+++ b/Flask_project/templates/index.html
@@ -9,20 +9,17 @@
 					<div class="overlay">
 						<div class="container">
 							<div class="w3layouts-banner-info text-center">
+								<br>
 								<h3 class="text-wh">Agro check</h3>
 								<h4 class="text-wh mx-auto my-4"><b>Get informed decisions about your farming strategy.</b></h4>
-								<br>
-								<h4 class="text-wh mx-auto my-4"><strong> Here are some questions we'll answer</strong></h4>
-								<p class="text-li mx-auto mt-2">
-									1. What crop to plant here? <br>
-									2. Which disease do your crop have? <br>
-									3. Detect whether it is crop or weed?<br>
-									4. How much the crop produce</p>
 							</div>
 						</div>
 					</div>
 				</div>
 	</div>
+</section>
+<section style="background-image:linear-gradient(to bottom right,rgb(202, 208, 113),rgb(211, 170, 98))">
+	<marquee class="text-li mx-auto mt-2"><p style="color:black;font-size:20px">Here are some questions we'll answer:&nbsp;  1. What crop to plant here?&nbsp; 2. Which disease do your crop have?&nbsp; 3. Detect whether it is crop or weed?&nbsp; 4. How much the crop produce?</p></marquee>
 </section>
 <!-- //banner -->
 
