--- a/Flask_project/templates/crop.html
+++ b/Flask_project/templates/crop.html
@@ -3,8 +3,9 @@
 <style>
 
     html body {
-      background-image:url('/static/images/rec.jpg');
-      background-size:contain;
+      background-image:url('/static/images/background_hd_dark.jpg');
+      background-size:cover;
+      background-repeat: no-repeat;
       
   }
 
@@ -12,7 +13,7 @@
 </style>
 <!--Form Section-->
 <br /><br />
-<h2 style="text-align: center; margin: 0px; color: black">
+<h2 style="text-align: center; margin: 0px; color: rgb(240, 236, 236)">
   <b>Find out the most suitable crop to grow in your farm</b>
 </h2>
 <br />
@@ -22,7 +23,7 @@
     width: 350px;
     height: 50rem;
     margin: 0px auto;
-    color: black;
+    color: rgb(251, 248, 248);
     border-radius: 25px;
     padding: 10px 10px;
   "
