--- a/Flask_project/templates/index.html
+++ b/Flask_project/templates/index.html
@@ -5,10 +5,10 @@
 <section class="banner_w3lspvt" id="home">
 	<div class="csslider infinity" id="slider1">
 	
-				<div class="banner-top">
+				<div class="banner-top" style="background-image:url(../static/images/crop_background.jpg)">
 					<div class="overlay">
 						<div class="container">
-							<div class="w3layouts-banner-info text-center">
+							<div class="w3layouts-banner-info text-center" >
 								<br>
 								<h3 class="text-wh">Agro check</h3>
 								<h4 class="text-wh mx-auto my-4"><b>Get informed decisions about your farming strategy.</b></h4>
