--- a/Flask_project/templates/disease.html
+++ b/Flask_project/templates/disease.html
@@ -3,11 +3,13 @@
 
 <style>
   html body {
-    background-color: rgb(206, 206, 228);
+    background-image:url('/static/images/plants.jpg');
+    background-size:cover;
+    background-repeat: no-repeat;
   }
 </style>
 <br /><br />
-  <h2 style="text-align: center; margin: 0px; color: black">
+  <h2 style="text-align: center; margin: 0px; color: rgb(245, 244, 244)">
     <b>Find out which disease has been caught by your plant</b>
   </h2>
   <br />
@@ -17,7 +19,7 @@
     width: 350px;
     height: 50rem;
     margin: 0px auto;
-    color: black;
+    color: rgb(252, 248, 248);
     border-radius: 25px;
     padding: 10px 10px;
     font-weight: bold;
