--- a/Flask_project/templates/crop.html
+++ b/Flask_project/templates/crop.html
@@ -82,7 +82,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="Temperature" style="font-size: 17px"><b>Temperature (in mm)</b></label>
+      <label for="Temperature" style="font-size: 17px"><b>Temperature (in °c)</b></label>
       <input
         type="number"
         step="0.01"
@@ -108,7 +108,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="Humidity" style="font-size: 17px"><b>Humidity</b></label>
+      <label for="Humidity" style="font-size: 17px"><b>Humidity (in %)</b></label>
       <input
         type="number"
         step="0.01"
