--- a/Flask_project/templates/weed.html
+++ b/Flask_project/templates/weed.html
@@ -3,7 +3,9 @@
 
 <style>
   html body {
-    background-color: rgb(206, 206, 228);
+    background-image:url('/static/images/crop_8.jpg');
+    background-size:contain;
+    background-repeat: no-repeat;
   }
 </style>
 <br /><br />
@@ -26,7 +28,7 @@
   
 
 
-  <form class="form-signin" method=post enctype=multipart/form-data>
+  <form class="form-signin" method=post enctype=multipart/form-data action="/upload">
 
     <h2 class="h4 mb-3 font-weight-normal"><b>Please Upload The Image</b></h2>
     <input type="file" name="file" class="form-control-file" id="inputfile" onchange="preview_image(event)" style="font-weight: bold;">
