--- a/Flask_project/templates/yield.html
+++ b/Flask_project/templates/yield.html
@@ -2,14 +2,14 @@
 
 <style>
   html body {
-    background-image:url('/static/images/multi_colors.avif');
+    background-image:url('/static/images/yield_4k_hd_dark_background.jpg');
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size:cover;
   }
 </style>
 <!--Form Section-->
 <br /><br />
-<h2 style="text-align: center; margin: 0px; color: black">
+<h2 style="text-align: center; margin: 0px; color: rgb(243, 237, 237)">
   <b>Find how much yield produced</b>
 </h2>
 <br />
@@ -19,7 +19,7 @@
     width: 350px;
     height: 50rem;
     margin: 0px auto;
-    color: black;
+    color: rgb(255, 251, 251);
     border-radius: 25px;
     padding: 10px 10px;
   "
@@ -163,7 +163,7 @@
     </div>
 
     <div class="form-group">
-      <label for="Area" style="font-size: 17px"><b>Area</b></label>
+      <label for="Area" style="font-size: 17px"><b>Area (in hectares)</b></label>
       <input
         type="number"
         class="form-control"
@@ -176,7 +176,7 @@
     </div>
     <div class="form-group">
       <label for="Production" style="font-size: 17px"
-        ><b>Production</b></label
+        ><b>Production (in metric tons)</b></label
       >
       <input
         type="number"
@@ -190,7 +190,7 @@
     </div>
 
     <div class="form-group">
-      <label for="Annual_Rainfall" style="font-size: 17px"><b>Annual_Rainfall</b></label>
+      <label for="Annual_Rainfall" style="font-size: 17px"><b>Annual_Rainfall (in mm)</b></label>
       <input
         type="number"
         class="form-control"
@@ -202,7 +202,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="Fertilizer_amount" style="font-size: 17px"><b>Fertilizer_amount</b></label>
+      <label for="Fertilizer_amount" style="font-size: 17px"><b>Fertilizer_amount (in kg)</b></label>
       <input
         type="text"
         class="form-control"
@@ -214,7 +214,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="Pesticide_amount" style="font-size: 17px"><b>Pesticide_amount</b></label>
+      <label for="Pesticide_amount" style="font-size: 17px"><b>Pesticide_amount (in kg)</b></label>
       <input
         type="text"
         class="form-control"
