--- a/Flask_project/templates/yield-result.html
+++ b/Flask_project/templates/yield-result.html
@@ -16,7 +16,7 @@ html body {
   <div class="row">
       <div class="col-sm py-2 py-md-3">
           <div class="card card-body" style="justify-content: center;">
-               <h1 class="text-center"><b><i>{{ result }} </i></b></h1>
+               <h1 class="text-center"><b><i>{{ result }} per hectare </i></b></h1>
           </div>
       </div>
   </div>
